# libbase64

./: .gitmodules  CMakeLists.txt  README.md  package.json
include/: base64.h
src/: base64.c
test/: CMakeLists.txt  decode-invalid.c  decode-length.c  decode.c  encode-length.c  encode.c
